testsuite/tests/partial-sigs/should_fail/NamedWildcardsEnabled.hs
{-# LANGUAGE NamedWildCards #-}
module NamedWildcardsEnabled where

foo :: _a -> _b
foo x = not x
