testsuite/tests/partial-sigs/should_fail/NamedWildcardsEnabled.stderr

NamedWildcardsEnabled.hs:4:8: error:
    • Found type wildcard ‘_a’ standing for ‘Bool’
      To use the inferred type, enable PartialTypeSignatures
    • In the type signature: foo :: _a -> _b

NamedWildcardsEnabled.hs:4:14: error:
    • Found type wildcard ‘_b’ standing for ‘Bool’
      To use the inferred type, enable PartialTypeSignatures
    • In the type signature: foo :: _a -> _b
